public/app/components/adventure/travel/travel-style.css
#travel .top {
    margin-top: -180px;
}
#travel #map {
    position: relative;
    display: block;
    margin-top: 20px;
    width: 100%;
    height: 600px;
    z-index: 30;
}
#travel #map svg {
    margin: 0 auto;
    display: block;
}
#travel .trip {
    display: inline-block;
    width: 100%;
    background: #454545;
    box-shadow: 0 0 0 3px #ccc;
    box-shadow: 5px 5px 16px rgba(0,0,0,0.1);
    padding: 0;
    margin-bottom: 20px;
    box-sizing: border-box;
    position: relative;
    text-align: center;
    vertical-align: top;
}
#travel .trip:nth-child(3) {
    margin-right: 0;
}
#travel .trip .title {
    padding: 15px;
}
#travel .trip .title h3 {
    font-size: 1.1em;
    color: #999;
    margin: 0;
}
#travel .trip .title .date {
    font-size: 0.8em;
    color: #777;
}
#travel .trip .photos {
    position: relative;
    width: 100%;
    height: 120px;
    overflow: hidden;
}
#travel .trip .photos .photo-container {
    position: relative;
    display: inline-block;
    width: 33.3%;
    height: 100%;
    margin: 0;
    padding: 0;
    overflow: hidden;
    -webkit-animation-duration: 1.5s;
    animation-duration: 1.5s;
    -webkit-animation-timing-function: ease-out;
    animation-timing-function: ease-out;
}
#travel .trip .photos .photo-container:nth-child(1) {
    -webkit-animation-name: photoTransition1;
    animation-name: photoTransition1;
}
#travel .trip .photos .photo-container:nth-child(2) {
    -webkit-animation-name: photoTransition2;
    animation-name: photoTransition2;
}
#travel .trip .photos .photo-container:nth-child(3) {
    -webkit-animation-name: photoTransition3;
    animation-name: photoTransition3;
}
@-webkit-keyframes photoTransition1 {
    0% {
        bottom: 100%;
        opacity: 0;
    }
    30% {
        bottom: 100%;
        opacity: 0;
    }
    60% {
        bottom: 0;
        opacity: 1;
    }
    100% {
        bottom: 0;
        opacity: 1;
    }
}
@keyframes photoTransition1 {
    0% {
        bottom: 100%;
        opacity: 0;
    }
    30% {
        bottom: 100%;
        opacity: 0;
    }
    60% {
        bottom: 0;
        opacity: 1;
    }
    100% {
        bottom: 0;
        opacity: 1;
    }
}
@-webkit-keyframes photoTransition2 {
    0% {
        bottom: 100%;
        opacity: 0;
    }
    50% {
        bottom: 100%;
        opacity: 0;
    }
    80% {
        bottom: 0;
        opacity: 1;
    }
    100% {
        bottom: 0;
        opacity: 1;
    }
}
@keyframes photoTransition2 {
    0% {
        bottom: 100%;
        opacity: 0;
    }
    50% {
        bottom: 100%;
        opacity: 0;
    }
    80% {
        bottom: 0;
        opacity: 1;
    }
    100% {
        bottom: 0;
        opacity: 1;
    }
}
@-webkit-keyframes photoTransition3 {
    0% {
        bottom: 100%;
        opacity: 0;
    }
    70% {
        bottom: 100%;
        opacity: 0;
    }
    100% {
        bottom: 0;
        opacity: 1;
    }
}
@keyframes photoTransition3 {
    0% {
        bottom: 100%;
    }
    70% {
        bottom: 100%;
    }
    100% {
        bottom: 0;
        opacity: 1;
    }
}

#travel .trip .photos .photo {
    display: block;
    min-width: 100%;
    max-height: 240%;
    max-width: 240%;
    margin: 0 auto;
    padding: 0;
}
#travel .trip .no-photo .fa {
    display: block;
    font-size: 2em;
    margin: 30px 0 10px;
}
#travel .trip .desc {
    clear: both;
    width: 100%;
    padding: 15px;
    font-size: 0.8em;
    color: #aaa;
}
#travel .trip .desc ul {
    list-style: none;
    padding: 0;
    height: 50px;
    overflow: hidden;
}
#travel .trip .desc li {
    display: inline-block;
    margin-left: 5px;
    padding-left: 5px;
    border-left: 3px solid rgba(255,255,255,.3);
    line-height: 3px;
}
#travel .trip .desc li:first-child {
    margin: 0;
    padding: 0;
    border: 0;
}

.photos .photo {
    opacity: 0.7;
}
.photos .photo:hover {
    opacity: 1.0;
}


/*
 * MEDIA QUERIES
 */
 
/* desktop */
@media only screen and (max-width: 1200px) {
    #travel .trip .photos {
        height: 100px;
    }
}

/* tablet */
@media only screen and (max-width: 991px) {
    #travel #map {
        display: block;
        height: 400px;
    }
    #travel .top {
        margin-top: 0;
    }
}

/* mobile */
@media only screen and (max-width: 767px) {
    #travel #map {
        height: 260px;
    }
}

